<resources>
    <string name="app_name">Test Suitmedia</string>
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="btn_check">CHECK</string>
    <string name="btn_next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="username">John Doe</string>
    <string name="selected_username">Selected User Name</string>
    <string name="btn_choose_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="ic_photo">ic_photo</string>
</resources>